<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TMinus</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_launch_list">Launches</string>
    <string name="title_launch_detail">Launch Detail</string>
    <string name="title_activity_count_down">Count Down</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_rocket_list">Rockets</string>
    <string name="title_activity_launch_locations">Locations</string>
    <string name="title_activity_rocket_detail">Rocket Detail</string>
    <string name="title_activity_location_detail">Location Detail</string>
    <string name="title_activity_agency_list">Agencies</string>
    <string name="title_activity_agency_detail">Agency Detail</string>

    <string name="NAVDRAWER_open_description">Open navigation drawer</string>
    <string name="NAVDRAWER_close_description">Close navigation drawer</string>
    <string name="NAVDRAWER_item_title_launch_list">Launches</string>
    <string name="NAVDRAWER_item_title_rocket_list">Rockets</string>
    <string name="NAVDRAWER_item_title_location_list">Locations</string>
    <string name="NAVDRAWER_item_title_agency_list">Agencies</string>

    <string name="MENU_share_item">Share</string>
    <string name="MENU_add_to_calendar_item">Add to Calendar</string>

    <string name="CALENDAR_event_title">Space Launch: %1$s</string>
    <string name="CALENDAR_event_description">Launch vehicle: %1$s\nConfiguration: %2$s</string>

    <string name="NOTIFICATION_reminder_title">Upcoming launch</string>
    <string name="NOTIFICATION_reminder_summary">%1$s\n\nNET: %2$s\nFrom: %3$s</string>
    <string name="NOTIFICATION_launch_imminent_title">Launch Imminent!</string>
    <string name="NOTIFICATION_launch_imminent_summary">%1$s\nLaunch has entered it\'s terminal count.\n\nNET:
        %2$s\nFrom: %3$s</string>

    <string name="LAUNCHLIST_item_hours">HOURS</string>
    <string name="LAUNCHLIST_no_mission_details">No mission details available</string>
    <string name="LAUNCHLIST_multiple_mission_details">%1$d missions on-board</string>

    <string-array name="LAUNCHLIST_navigation_options">
        <item>Upcoming</item>
        <item>Previous</item>
    </string-array>

    <string name="ROCKETLIST_item_configuration">Configuration: %1$s</string>
    <string name="ROCKETLIST_item_no_configuration">None specified</string>
    <string name="ROCKETLIST_item_agencies">Agencies: %1$s</string>
    <string name="ROCKETLIST_item_no_agencies">None specified</string>

    <string name="AGENCYLISTDIALOG_title">Agencies</string>
    <string name="COUNTRYLISTDIALOG_title">Countries</string>

    <string name="LAUNCHDETAIL_status">Status:</string>
    <string name="LAUNCHDETAIL_launch_window">Launch:</string>
    <string name="LAUNCHDETAIL_launch_window_length">Window:</string>
    <string name="LAUNCHDETAIL_location">Location:</string>
    <string name="LAUNCHDETAIL_count_down">TMinus</string>
    <string name="LAUNCHDETAIL_no_mission_details">No mission details available</string>
    <string name="LAUNCHDETAIL_count_down_button">Count Down</string>
    <string name="LAUNCHDETAIL_launch_image_description">Picture of the rocket</string>
    <string name="LAUNCHDETAIL_imminent_launch">This rocket is launching soon, go to the count down!</string>
    <string name="LAUNCHDETAIL_launch_vehicle">Launch Vehicle</string>
    <string name="LAUNCHDETAIL_rocket_detail_button">Details</string>
    <string name="LAUNCHDETAIL_launch_location">Launch Location</string>
    <string name="LAUNCHDETAIL_location_detail_button">Details</string>
    <string name="LAUNCHDETAIL_details_header">Details</string>
    <string name="LAUNCHDETAIL_net_hours">HOURS</string>
    <string name="LAUNCHDETAIL_description_zoom_touch_close">Touch to close</string>

    <string name="LAUNCHDETAIL_share_no_mission">No mission details available</string>
    <string name="LAUNCHDETAIL_share_details">%1$s\n\nLocation: %2$s\n\nExpected Launch Time: %3$s</string>

    <string name="LAUNCHDETAIL_mission_type_icon_description">Mission type icon</string>

    <string name="ROCKETDETAIL_title">Rocket Detail</string>
    <string name="ROCKETDETAIL_loading_summary">Loading rocket summary…</string>
    <string name="ROCKETDETAIL_no_summary">No summary available.</string>
    <string name="ROCKETDETAIL_launch_vehicle_title">Launch Vehicle</string>

    <string name="AGENCYDETAIL_no_summary">No summary available.</string>
    <string name="AGENCYDETAIL_loading_summary">Loading agency summary…</string>
    <string name="AGENCYDETAIL_no_type">Unknown Type</string>

    <string name="LOCATIONDETAIL_title">Location Detail</string>

    <string name="TOAST_launch_list_refresh_complete">Launch List updated</string>
    <string name="TOAST_launch_list_refresh_failed">Launch List update failed</string>
    <string name="TOAST_rocket_detail_update_complete">Rocket details updated</string>
    <string name="TOAST_rocket_detail_update_failed">Rocket details update failed</string>
    <string name="TOAST_agency_detail_update_complete">Agency details updated</string>
    <string name="TOAST_agency_detail_update_failed">Agency details update failed</string>
    <string name="TOAST_rocket_list_update_complete">Rocket list updated</string>
    <string name="TOAST_rocket_list_update_failed">Rocket list update failed</string>
    <string name="TOAST_agency_list_update_complete">Agency list updated</string>
    <string name="TOAST_agency_list_update_failed">Agency list update failed</string>
    <string name="TOAST_location_list_update_complete">Location list updated</string>
    <string name="TOAST_location_list_update_failed">Location list update failed</string>
    <string name="TOAST_location_detail_pad_no_coordinates">No coordinates available for Pad</string>

    <string name="COUNTDOWN_launch_status">Status: %s</string>
    <string name="COUNTDOWN_launch_status_green">GO</string>
    <string name="COUNTDOWN_launch_status_red">NO-GO</string>
    <string name="COUNTDOWN_launch_status_success">SUCCESS</string>
    <string name="COUNTDOWN_launch_status_fail">FAIL</string>

    <string name="PREF_general_preferences_title">Background Updating</string>
    <string name="PREF_automatic_updating">Automatic Updating</string>
    <string name="PREF_automatic_updating_summary">Update Launch data in the background</string>
    <string name="PREF_automatic_updating_frequency">Update Frequency</string>
    <string name="PREF_automatic_updating_frequency_dialog_title">Update Frequency</string>
    <string name="PREF_automatic_updating_frequency_summary">How often TMinus will update Launch data</string>

    <string-array name="PREF_automatic_updating_frequency_options">
        <item>Twice a day</item>
        <item>Once a day</item>
        <item>Every other day</item>
        <item>Once a week</item>
    </string-array>

    <string name="PREF_notification_preferences_title">Notifications</string>
    <string name="PREF_reminder_notification">Launch reminder notifications</string>
    <string name="PREF_reminder_notification_summary">Display a notification one day before each Launch</string>
    <string name="PREF_imminent_launch_notification">Imminent Launch notifications</string>
    <string name="PREF_imminent_launch_notification_summary">Display a notification when a Launch is 10 minutes out
    </string>

    <string name="PREF_alert_pebble_for_notifications">Alert Pebble</string>
    <string name="PREF_alert_pebble_for_notifications_summary">Send notifications to Pebble Smart Watches</string>
    <string name="PREF_debug_preferences_title">Debug</string>
    <string name="PREF_always_show_count_down">Always show Count Down</string>
    <string name="PREF_always_show_count_down_summary">Display the Count Down button for all Launches regardless of how
        far off they are
    </string>

    <string name="LOCATIONDETAIL_location_label">Location</string>
    <string name="LOCATIONDETAIL_pad_list_label">Launch Pads:</string>
    <string name="LAUNCHLIST_no_launches">No launches available</string>

    <string name="about_title">About</string>
    <string name="about_body_header">Dark Rock Studios</string>
    <string name="about_body_bio">Adam Brown (Wavesonics)</string>
    <string name="about_body_email">darkrockstudios@gmail.com</string>
    <string name="about_body_website">darkrockstudios.com</string>
    <string name="about_body_market">Check out more of our apps:</string>
    <string name="about_body_market_button">Google Play</string>
    <string name="about_body_open_source">TMinus is Open Source!</string>
    <string name="about_body_github_android"><a href="http://github.com/Wavesonics/TMinus">TMinus</a></string>
    <string name="about_body_feedback"><i>Found a bug? Feature request?</i>\n<a href="https://github.com/Wavesonics/TMinus/issues/new">Log it here!</a></string>

    <string name="MISSIONTYPE_astrophysics">Astrophysics</string>
    <string name="MISSIONTYPE_earth_science">Earth Science</string>
    <string name="MISSIONTYPE_gov_secret">Gov/Secrete</string>
    <string name="MISSIONTYPE_heliophysics">Heliophysics</string>
    <string name="MISSIONTYPE_human_explore">Human Exploration</string>
    <string name="MISSIONTYPE_planet_science">Planetary Science</string>
    <string name="MISSIONTYPE_robotic_explore">Robotic Exploration</string>
    <string name="MISSIONTYPE_tourism">Tourism</string>
    <string name="MISSIONTYPE_unknown">Unknown</string>

</resources>
