<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/PREF_general_preferences_title">
        <CheckBoxPreference
                android:key="automatic_updating"
                android:title="@string/PREF_automatic_updating"
                android:summary="@string/PREF_automatic_updating_summary"
                android:defaultValue="true"/>
        <ListPreference
                android:dependency="automatic_updating"
                android:key="automatic_updating_frequency"
                android:title="@string/PREF_automatic_updating_frequency"
                android:summary="@string/PREF_automatic_updating_frequency_summary"
                android:dialogTitle="@string/PREF_automatic_updating_frequency_dialog_title"
                android:entries="@array/PREF_automatic_updating_frequency_options"
                android:entryValues="@array/PREF_automatic_updating_frequency_values"
                android:defaultValue="@string/PREF_automatic_updating_frequency_default_value"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/PREF_notification_preferences_title">
        <CheckBoxPreference
                android:key="reminder_notification"
                android:title="@string/PREF_reminder_notification"
                android:summary="@string/PREF_reminder_notification_summary"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="imminent_launch_notification"
                android:title="@string/PREF_imminent_launch_notification"
                android:summary="@string/PREF_imminent_launch_notification_summary"
                android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/PREF_debug_preferences_title">
        <CheckBoxPreference
                android:key="always_show_count_down"
                android:title="@string/PREF_always_show_count_down"
                android:summary="@string/PREF_always_show_count_down_summary"
                android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>